[package]
name = "tw_mastersrv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde_json]
version = "1"

[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dependencies.ureq]
version = "2.5.0"
features = ["json"]
